# MetaClaw

./: .gitignore  .gitmodules  .versionrc.json  AGENT.md  API.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  MEMORY.md  README.md  RELEASE_CHECKLIST.md  RULE.md  SECURITY.md  USER.md  WORKSPACE_LAYOUT.md  docker-compose.yml  package-lock.json  package.json  wrangler.toml
metaclaw/metaclaw/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  app.py  config-template.json  pyproject.toml  requirements.txt  run.sh
metaclaw/metaclaw/bridge/: agent_bridge.py  agent_initializer.py  bot_manager.py  bridge.py
metaclaw/metaclaw/channel/: adapter.py
metaclaw/metaclaw/cli/: cli.py  utils.py
metaclaw/metaclaw/common/: brand.py  cloud_client.py  const.py  device.py  session_tmp.py  tmp_dir.py  token_bucket.py  user_manager.py  utils.py
metaclaw/metaclaw/config/: __init__.py  channel.py  models.py
metaclaw/metaclaw/docker/: Dockerfile.latest  docker-compose.yml  entrypoint.sh
metaclaw/metaclaw/docs/: channel-adapter-development.md  docs.json  install.md  marketplace-publishing.md  migration-from-chatgpt-on-wechat.md  plugin-development.md  providers.md  quickstart.md  security-permissions.md  troubleshooting.md  upgrade.md
metaclaw/metaclaw/doctor/: README.md  commands.py  doctor.py  feishu_client.py  health.py  recovery.py
metaclaw/metaclaw/marketplace/: README.md  index.json  schema.json
metaclaw/metaclaw/models/: bot_factory.py  openai_compatible_bot.py
metaclaw/metaclaw/plugins/: README.md  __init__.py  plugin.py  plugin_manager.py
metaclaw/metaclaw/scripts/: install.sh  run.ps1  start.sh  tout.sh  upgrade.sh
metaclaw/metaclaw/skills/: README.md
metaclaw/metaclaw/tests/: test_agent_protocol.py  test_agent_stream.py  test_amap_nearby_poi.py  test_app_skill_layout.py  test_cli_lark.py  (+15 more)
(+175 files in other folders)
